    cmake_minimum_required(VERSION 3.29)
project(cpp3sem)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp3sem main.cpp)
    add_executable(HW1 08.09/HW1.cpp)
    add_executable(HW2_1 14.09/HW2_1.cpp)
    add_executable(HW2_2 14.09/HW2_2.cpp)
    add_executable(HW2_3 14.09/HW2_3.cpp)
    add_executable(HW2_4 14.09/HW2_4.cpp)
    add_executable(HW3_1 13.10/HW3_1.cpp)
    add_executable(HW3_2 13.10/HW3_2.cpp)

    add_executable(HW4_1 13.10/HW4_1.cpp)
    add_executable(HW4_2 13.10/HW4_2.cpp)
    add_executable(HW5 20.10/HW5.cpp)
